# MatchAnything

./: .gitignore  MANIFEST.in  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
config/: app.yaml  defaults.yaml  models.yaml
notebook/: visualize_match_json.ipynb
src/imcui/: __init__.py
src/matchanything/: __init__.py  cli.py  config.py  runtime.py  vendor.py
src/matchanything/api/: core.py  server.py
src/matchanything/hloc/: __init__.py  extract_features.py  match_dense.py  match_features.py
src/matchanything/hloc/matchers/: matchanything.py
src/matchanything/hloc/utils/: parsers.py  viz.py
src/matchanything/ui/: __init__.py  app_class.py  utils.py  viz.py
tests/: test_basic.py
